--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "snippets2changelog"
-version = "0.0.0+will-be-updated-automatically"
+version = "0.0.0" # will-be-updated-automatically
 description =  "Generate a changelog from individual snippets"
 authors = ["brainelectronics <info@brainelectronics.de>"]
 repository = "https://github.com/brainelectronics/snippets2changelog"
@@ -33,7 +33,7 @@ enable = true
 format-jinja-imports = [
   { module = "subprocess", item = "check_output" },
 ]
-format-jinja = """{{ check_output(["python", "-c", "from pathlib import Path; exec(Path('snippets2changelog/version.py').read_text()); print(__version__)"]).decode().strip() }}"""
+format-jinja = """{{ check_output(["python3", "-c", "from pathlib import Path; exec(Path('snippets2changelog/version.py').read_text()); print(__version__)"]).decode().strip() }}"""
 # format-jinja = "{{ env.get('PROJECT_VERSION') }}"
 
 [tool.poetry.scripts]
@@ -46,6 +46,7 @@ GitPython = "~3.1.43"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
+changelog2version = "^0.10"
 flake8 = "*"
 isort = "*"
 mypy = "*"
