--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,11 @@ jobs:
           echo "latest_version=$latest_version" >> $GITHUB_ENV
       - name: Build package
         run: |
+          poetry run changelog-generator \
+            changelog changelog.md \
+            --snippets=.snippets
           poetry run changelog2version \
-            --changelog_file changelog.md \
+            --changelog_file changelog.md.new \
             --version_file snippets2changelog/version.py \
             --version_file_type py \
             --debug
