--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -36,8 +36,11 @@ jobs:
           echo "latest_version=$latest_version" >> $GITHUB_ENV
       - name: Build package
         run: |
+          poetry run changelog-generator \
+            changelog changelog.md \
+            --snippets=.snippets
           poetry run changelog2version \
-            --changelog_file changelog.md \
+            --changelog_file changelog.md.new \
             --version_file snippets2changelog/version.py \
             --version_file_type py \
             --additional_version_info="-rc${{ github.run_number }}.dev${{ github.event.number }}" \
