--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -15,7 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          # all history is needed to crawl it properly
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
