--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          # all history is needed to crawl it properly
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
