--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -14,8 +14,13 @@ jobs:
   test-and-coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          # all history is needed to crawl it properly
+          fetch-depth: 0
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: '3.11'
       - name: Execute tests
