--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,15 @@ jobs:
           python -m pip install -U poetry twine
           poetry self add "poetry-dynamic-versioning[plugin]"
           poetry install
+      - name: Update changelog with snippets
+        run: |
+          poetry run changelog-generator \
+            changelog changelog.md \
+            --snippets=.snippets
       - name: Parse changelog
         id: parse_changelog
         run: |
-          poetry run changelog2version --changelog_file changelog.md --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['description'])" > latest_description.txt
+          poetry run changelog2version --changelog_file changelog.md.new --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['description'])" > latest_description.txt
           echo 'LATEST_DESCRIPTION<<"EOT"' >> $GITHUB_OUTPUT
           cat latest_description.txt >> $GITHUB_OUTPUT
           echo '"EOT"' >> $GITHUB_OUTPUT
@@ -42,9 +47,6 @@ jobs:
           echo "latest_version=$latest_version" >> $GITHUB_ENV
       - name: Build package
         run: |
-          poetry run changelog-generator \
-            changelog changelog.md \
-            --snippets=.snippets
           poetry run changelog2version \
             --changelog_file changelog.md.new \
             --version_file snippets2changelog/version.py \
