--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,20 +35,21 @@ jobs:
         run: |
           poetry run changelog-generator \
             changelog changelog.md \
-            --snippets=.snippets
+            --snippets=.snippets \
+            --in-place
       - name: Parse changelog
         id: parse_changelog
         run: |
-          poetry run changelog2version --changelog_file changelog.md.new --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['description'])" > latest_description.txt
+          poetry run changelog2version --changelog_file changelog.md --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['description'])" > latest_description.txt
           echo 'LATEST_DESCRIPTION<<"EOT"' >> $GITHUB_OUTPUT
           cat latest_description.txt >> $GITHUB_OUTPUT
           echo '"EOT"' >> $GITHUB_OUTPUT
-          latest_version=$(poetry run changelog2version --changelog_file changelog.md.new --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['version'])")
+          latest_version=$(poetry run changelog2version --changelog_file changelog.md --print | python -c "import sys, json; print(json.load(sys.stdin)['info']['version'])")
           echo "latest_version=$latest_version" >> $GITHUB_ENV
       - name: Build package
         run: |
           poetry run changelog2version \
-            --changelog_file changelog.md.new \
+            --changelog_file changelog.md \
             --version_file snippets2changelog/version.py \
             --version_file_type py \
             --debug
