add meta comment below every version entry of the changelog

--- a/snippets2changelog/templates/changelog_part.md.template
+++ b/snippets2changelog/templates/changelog_part.md.template
@@ -1,4 +1,7 @@
 ## [{{ version }}] - {{ timestamp }}
+{%- if meta %}
+<!-- meta = {{ meta }} -->
+{%- endif %}
 {{- content }}
 [{{ version }}]: {{ version_reference }}
 
