--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ format-jinja = """{{ check_output(["python3", "-c", "from pathlib import Path; e
 changelog-generator = 'snippets2changelog.cli:main'
 
 [tool.poetry.dependencies]
-changelog2version = "^0.10"
+changelog2version = ">= 0.10, < 1" # ^ or ~ would not update to 0.11 or newer
 GitPython = "~3.1.43"
 jinja2 = "^3.1.4"
 python = "^3.9"
