--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -56,6 +56,7 @@ jobs:
         # if: ${{ fromJson(env.CHANGELOG_JSON).meta.type == 'bugfix' }}
         run: |
           echo "CHANGELOG_JSON: $CHANGELOG_JSON"
+          echo "meta fromJson ${{ fromJson(CHANGELOG_JSON).meta }}"
       - name: Parse changelog JSON
         id: parse_changelog_json_2
         run: |
