--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -52,7 +52,6 @@ jobs:
             --pretty \
             --debug
           echo "CHANGELOG_JSON=$(jq -c . < changelog.json)" >> $GITHUB_ENV
-          echo "CHANGELOG_JSON=$(jq -c . < changelog.json)" >> $GITHUB_OUTPUT
       - name: Check JSON content
         # if: ${{ fromJson(env.CHANGELOG_JSON).meta.type == 'bugfix' }}
         run: |
@@ -61,12 +60,10 @@ jobs:
       - name: Parse changelog JSON
         id: parse_changelog_json_2
         run: |
-          poetry run changelog2version \
-            --changelog_file changelog.md \
-            --print
+          echo "CHANGELOG_JSON_STDOUT=$(poetry run changelog2version --changelog_file changelog.md --print)" >> $GITHUB_OUTPUT
       - name: Check JSON content 2
         run: |
-            echo "meta type fromJson: START${{ fromJSON(steps.parse_changelog_json.outputs.CHANGELOG_JSON).meta.type }}END"
+            echo "meta type fromJson: START${{ fromJSON(steps.parse_changelog_json_2.outputs.CHANGELOG_JSON_STDOUT).meta.type }}END"
       - name: Build package
         run: |
           poetry run changelog2version \
