--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -56,7 +56,7 @@ jobs:
         # if: ${{ fromJson(env.CHANGELOG_JSON).info.meta.type == 'bugfix' }}
         run: |
           echo "CHANGELOG_JSON: $CHANGELOG_JSON"
-          echo "info meta fromJson: START${{ fromJson(env.CHANGELOG_JSON).info.meta }}END"
+          echo "info meta type fromJson: START${{ fromJson(env.CHANGELOG_JSON).info.meta.type }}END"
           echo "$CHANGELOG_JSON" | jq ".info.meta.type"
           # works, prints "bugfix"
       - name: Parse changelog JSON 2
