--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -49,7 +49,7 @@ jobs:
           echo '"EOT"' >> $GITHUB_OUTPUT
           echo "latest_version=$(jq -r '.info.version' changelog.json)" >> $GITHUB_ENV
       - name: Build package
-        if: ! ${{ contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
+        if: ${{ !contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
         run: |
           poetry run changelog2version \
             --changelog_file changelog.md \
@@ -59,11 +59,11 @@ jobs:
             --debug
           poetry build
       - name: Test built package
-        if: ! ${{ contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
+        if: ${{ !contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
         run: |
           twine check dist/*.tar.gz
       - name: Archive build package artifact
-        if: ! ${{ contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
+        if: ${{ !contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
         uses: actions/upload-artifact@v4
         with:
           # https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
@@ -72,7 +72,7 @@ jobs:
           path: dist/*.tar.gz
           retention-days: 14
       - name: Publish package
-        if: ! ${{ contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
+        if: ${{ !contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
         uses: pypa/gh-action-pypi-publish@release/v1.5
         with:
           repository_url: https://test.pypi.org/legacy/
@@ -81,7 +81,7 @@ jobs:
           verbose: true
           print_hash: true
       - name: Create Prerelease
-        if: ! ${{ contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
+        if: ${{ !contains(fromJson(env.CHANGELOG_JSON).info.meta.scope, 'internal') }}
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
