back to good old cat for latest description

--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -35,9 +35,10 @@ jobs:
             changelog changelog.md \
             --snippets=.snippets \
             --dry-run > latest-entry.json
+          jq -r ".content" latest-entry.json > latest_description.txt
           echo "CHANGELOG_JSON=$(jq -c . < latest-entry.json)" >> $GITHUB_ENV
           echo 'LATEST_DESCRIPTION<<"EOT"' >> $GITHUB_OUTPUT
-          jq -r ".content" latest-entry.json >> $GITHUB_OUTPUT
+          cat latest_description.txt >> $GITHUB_OUTPUT
           echo '"EOT"' >> $GITHUB_OUTPUT
           echo "latest_version=$(jq -r '.version' latest-entry.json)" >> $GITHUB_ENV
       - name: Update changelog with snippets
