--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -35,6 +35,10 @@ jobs:
             changelog changelog.md \
             --snippets=.snippets \
             --dry-run > latest-entry.json
+          jq -r ".content" latest-entry.json > latest_description.txt
+          sed -i '/^$/d' latest_description.txt
+          cat latest-entry.json
+          cat latest_description.txt
       - name: Update changelog with snippets
         run: |
           poetry run changelog-generator \
