--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -35,19 +35,13 @@ jobs:
             changelog changelog.md \
             --snippets=.snippets \
             --dry-run > latest-entry.json
-          cat latest-entry.json
-          cat latest-entry.json | python -c "import sys, json; print(json.load(sys.stdin)['content'])" > latest_description.txt
-
-          # jq -r ".content" latest-entry.json > latest_description.txt
-          # sed -i '/^$/d' latest_description.txt
-          # echo "CHANGELOG_JSON=$(jq -c . < latest-entry.json)" >> $GITHUB_ENV
-
+          jq -r ".content" latest-entry.json > latest_description.txt
+          sed -i '/^$/d' latest_description.txt
+          echo "CHANGELOG_JSON=$(jq -c . < latest-entry.json)" >> $GITHUB_ENV
           echo 'LATEST_DESCRIPTION<<"EOT"' >> $GITHUB_OUTPUT
           cat latest_description.txt >> $GITHUB_OUTPUT
           echo '"EOT"' >> $GITHUB_OUTPUT
-          # echo "latest_version=$(jq -r '.version' latest-entry.json)" >> $GITHUB_ENV
-
-          exit 128
+          echo "latest_version=$(jq -r '.version' latest-entry.json)" >> $GITHUB_ENV
       - name: Update changelog with snippets
         run: |
           poetry run changelog-generator \
