--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -37,6 +37,7 @@ jobs:
             --dry-run > latest-entry.json
           echo "CHANGELOG_JSON=$(jq -c . < latest-entry.json)" >> $GITHUB_ENV
       - name: Update changelog with snippets
+        id: update_changelog
         run: |
           poetry run changelog-generator \
             changelog changelog.md \
@@ -93,6 +94,6 @@ jobs:
         with:
           tag_name: ${{ env.latest_version }}-rc${{ github.run_number }}.dev${{ github.event.number }}
           release_name: ${{ env.latest_version }}-rc${{ github.run_number }}.dev${{ github.event.number }}
-          body: ${{ steps.parse_changelog.outputs.LATEST_DESCRIPTION }}
+          body: ${{ steps.update_changelog.outputs.LATEST_DESCRIPTION }}
           draft: false
           prerelease: true
